added hanoi sort to work

--- a/work.html
+++ b/work.html
@@ -83,6 +83,20 @@
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">
+                      <a target="_blank" class="link b black-80 " href="https://docs.google.com/presentation/d/e/2PACX-1vTEFvmQacI0a-NeA9DnU58SuYOy3MqDvup1_kxTQklIl93tVBSGWQalBJoeJAv8oACY-o2M35ARGiqq/pub?start=false&loop=false&delayms=3000&slide=id.g1a1feab4d73_0_0" alt="Project hanoi sort slides">
+                        <i class="fa-solid fa-person-chalkboard" style="font-size: smaller;"></i>
+                      </a>
+                      <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/hanoi-sort" alt="Project libc github">
+                        <i class="fa-brands fa-github" style="font-size: smaller;"></i>
+                        <span class= "b name-link black-80"> Hanoi Sort</span>
+                      </a>
+                      <span class="br1 bg-red white ph1 f7 b">c</span>
+                      <span class="br1 bg-black-40 white ph1 f7 b">algorithms</span>
+                    </div>
+                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Sort any number sequence in ascending order in the least amount of operations possible.</p>
+                  </div>
+                  <div class="mb3">
+                    <div class="lh-copy">
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/wireframe-renderer" alt="Project wireframe renderer github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> Wireframe Renderer</span>
@@ -92,7 +106,7 @@
                       <span class="br1 bg-black-40 white ph1 f7 b"> macOS</span>
                     </div>
                     <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Renders a simple wireframe model of a landscape from given 3D coordinates. User can translate, zoom, rotate the rendered model and choose its projection type. </p>
-                  </div>
+                  </div>                  
                   <div class="mb3">
                     <div class="lh-copy">
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/mylibc" alt="Project libc github">
@@ -100,16 +114,16 @@
                         <span class= "b name-link black-80"> Mylibc</span>
                       </a>
                       <span class="br1 bg-red white ph1 f7 b">c</span>
+                      <p class="mb2 mv1 gray f7 lh-copy measure-wide"> A few recoded functions of the C standard library. Features my implementation of printf</p>
                     </div>
-                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> A few functions of the C standard library recoded by me. Features my implementation of printf. </p>
                   </div>
                   <div class="mb3">
-                    <div class="lh-copy">
+                    <div class="lh-copy">                      
+                      <a target="_blank" class="link b black-80 " href="https://astonishing-pithivier-fc247a.netlify.app" alt="Project Overwatch landing page live version">
+                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                       
+                      </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/overwatch-tribute" alt="Project Overwatch landing page github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                      </a>
-                      <a target="_blank" class="link b black-80 " href="https://astonishing-pithivier-fc247a.netlify.app" alt="Project Overwatch landing page live version">
-                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> Overwatch Landing Page</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
@@ -120,12 +134,12 @@
                     <p class="mb2 mv1 gray f7 lh-copy measure-wide"> A tribute to a popular multiplayer FPS "Overwatch" that uses Blizzard assets. Showcases css animations and parallax. </p>
                   </div>
                   <div class="mb3">
-                    <div class="lh-copy">
+                    <div class="lh-copy">                      
+                      <a target="_blank" class="link b black-80 " href="https://gleeful-croissant-438e0b.netlify.app/" alt="Weather Web App landing page live version">
+                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                       
+                      </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/sc-plus-7" alt="Weather Web App landing page github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                      </a>
-                      <a target="_blank" class="link b black-80 " href="https://gleeful-croissant-438e0b.netlify.app/" alt="Weather Web App landing page live version">
-                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> Weather Web App</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
@@ -137,12 +151,12 @@
                     <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Shows weather for the specified city for the next 7 days. Users can input city manually or allow app to locate them. Displays time. Uses OpenWeather and Geolocation API data. </p>
                   </div>
                   <div class="mb3">
-                    <div class="lh-copy">
+                    <div class="lh-copy">                     
+                      <a target="_blank" class="link b black-80 " href="https://iamalwayshome.com" alt="My Personal Website live version">
+                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                        
+                      </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/sc-responsive-w4" alt="My Personal Website github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                      </a>
-                      <a target="_blank" class="link b black-80 " href="https://frolicking-blini-8ca9d4.netlify.app" alt="My Personal Website live version">
-                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> My Personal Website</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
@@ -151,7 +165,7 @@
                       <span class="br1 bg-black-40 white ph1 f7 b">css</span>
                       <span class="br1 bg-black-40 white ph1 f7 b">api</span>
                     </div>
-                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> The website you are browsing! HTML canvas are used for cursor trail. Serves GitHub API data. Features a CSS drawing of a cat. </p>
+                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> The website you are browsing! Serves GitHub API data. HTML canvas are used for cursor trail. Features a CSS drawing of a cat. </p>
                   </div>
                   <h2 class="f4 mb3 my-3">> work in progress </h2>
                   <ul class="list pa0">
@@ -169,7 +183,7 @@
                             </a>Samuel Bars </span>, <span class="purple b" alt="Samuel Bars email">
                             <a href="mailto:kolbasnykrug@gmail.com" class="purple b" alt="Sofia Zaleskaya email">
                               <i class="fa-solid fa-envelope"></i>
-                            </a>Sofia Zaleskaya </span>. </p>
+                            </a>Sofia Zalesskaya </span>. </p>
                       </div>
                     </div>
                     <div>
@@ -215,6 +229,20 @@
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">
+                      <a target="_blank" class="link b black-80 " href="https://docs.google.com/presentation/d/e/2PACX-1vTEFvmQacI0a-NeA9DnU58SuYOy3MqDvup1_kxTQklIl93tVBSGWQalBJoeJAv8oACY-o2M35ARGiqq/pub?start=false&loop=false&delayms=3000&slide=id.g1a1feab4d73_0_0" alt="Project hanoi sort slides">
+                        <i class="fa-solid fa-person-chalkboard" style="font-size: smaller;"></i>
+                      </a>
+                      <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/hanoi-sort" alt="Project libc github">
+                        <i class="fa-brands fa-github" style="font-size: smaller;"></i>
+                        <span class= "b name-link black-80"> Hanoi Sort</span>
+                      </a>
+                      <span class="br1 bg-red white ph1 f7 b">c</span>
+                      <span class="br1 bg-black-40 white ph1 f7 b">algorithms</span>
+                    </div>
+                    <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Sort any number sequence in ascending order in the least amount of operations possible.</p>
+                  </div>
+                  <div class="mb3">
+                    <div class="lh-copy">
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/wireframe-renderer" alt="Project wireframe renderer github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> Wireframe Renderer</span>
@@ -224,7 +252,7 @@
                       <span class="br1 bg-black-40 white ph1 f7 b"> macOS</span>
                       <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Renders 3D coordinates into a wireframe model. </p>
                     </div>
-                  </div>
+                  </div>                  
                   <div class="mb3">
                     <div class="lh-copy">
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/mylibc" alt="Project libc github">
@@ -236,12 +264,12 @@
                     </div>
                   </div>
                   <div class="mb3">
-                    <div class="lh-copy">
+                    <div class="lh-copy">                     
+                      <a target="_blank" class="link b black-80 " href="https://astonishing-pithivier-fc247a.netlify.app" alt="Project Overwatch landing page live version">
+                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                        
+                      </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/overwatch-tribute" alt="Project Overwatch landing page github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                      </a>
-                      <a target="_blank" class="link b black-80 " href="https://astonishing-pithivier-fc247a.netlify.app" alt="Project Overwatch landing page live version">
-                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> Overwatch Page</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
@@ -252,12 +280,12 @@
                     </div>
                   </div>
                   <div class="mb3">
-                    <div class="lh-copy">
+                    <div class="lh-copy">                     
+                      <a target="_blank" class="link b black-80 " href="https://gleeful-croissant-438e0b.netlify.app/" alt="Weather Web App landing page live version">
+                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                        
+                      </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/sc-plus-7" alt="Weather Web App landing page github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                      </a>
-                      <a target="_blank" class="link b black-80 " href="https://gleeful-croissant-438e0b.netlify.app/" alt="Weather Web App landing page live version">
-                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> Weather Web App</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
@@ -269,12 +297,12 @@
                     </div>
                   </div>
                   <div class="mb3">
-                    <div class="lh-copy">
+                    <div class="lh-copy">                      
+                      <a target="_blank" class="link b black-80 " href="https://frolicking-blini-8ca9d4.netlify.app" alt="My Personal Website live version">
+                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                        
+                      </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/sc-responsive-w4" alt="My Personal Website github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                      </a>
-                      <a target="_blank" class="link b black-80 " href="https://frolicking-blini-8ca9d4.netlify.app" alt="My Personal Website live version">
-                        <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>
                         <span class= "b name-link black-80"> My Website</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
@@ -282,7 +310,7 @@
                       <span class="br1 bg-black-40 white ph1 f7 b">html</span>
                       <span class="br1 bg-black-40 white ph1 f7 b">css</span>
                       <span class="br1 bg-black-40 white ph1 f7 b">api</span>
-                      <p class="mb2 mv1 gray f7 lh-copy measure-wide"> HTML canvas are used for cursor trail. Serves GitHub API data.</p>
+                      <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Serves GitHub API data.  HTML canvas are used for cursor trail. </p>
                     </div>
                   </div>
                   <h2 class="f4 mb3 pt-3">> work in progress</h2>
@@ -301,7 +329,7 @@
                             </a>Samuel Bars </span>, <span class="purple b" alt="Samuel Bars email">
                             <a href="mailto:kolbasnykrug@gmail.com" class="purple b" alt="Sofia Zaleskaya email">
                               <i class="fa-solid fa-envelope"></i>
-                            </a>Sofia Zaleskaya </span>. </p>
+                            </a>Sofia Zalesskaya </span>. </p>
                       </div>
                     </div>
                     <div>
