about rework; favicon added

--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/styleAbout.css" />
+    <link rel="icon" type="image/x-icon" href="/src/favicon.png">
   </head>
   <body>
     <div class="preloader">
@@ -24,10 +25,12 @@
               <div class="col-4"></div>
               <div class="col-7">
                 <div class="herosection mt-5">
-                  <h1 class="username-lg"> Hello, my name is Evelina-Svitlana Protsenko but you can call me Lina. <br> I love  programming, travelling and learning new things. <br>
-                    <br> I had the chance to study math, programming  and game design <br> in 4 countries: <img src="src/emoji/ua.png" alt="ua emoji" class="flag"> Ukraine, <img src="src/emoji/ru.png" alt="ua emoji" class="flag"> Russia, <img src="src/emoji/sct.png" alt="ua emoji" class="flag"> Scotland and now <img src="src/emoji/ch.png" alt="ua emoji" class="flag"> Switzerland. <br> I also attended Y Combinator startup school. <br>
-                    <br> Amongst too many things I'm curious about, I'm passionate about <br> technology, entrepreneurship, innovation, and the internet. <br>
-                    <br> Right now I'm looking for an entry-level position in 💻 <a class="hero-name" alt="Lina's Work" href="/work.html" target="_blank">software development.</a>
+                  <h1 class="username-lg"> Hello, my name is Evelina-Svitlana Protsenko but you can call me Lina. <br>                    
+                    I love  programming, traveling, and learning new things. <br>
+                    <br> I had the chance to study math, programming, and game design <br> in 4 countries: <img src="src/emoji/ua.png" alt="ua emoji" class="flag"> Ukraine, <img src="src/emoji/ru.png" alt="ua emoji" class="flag"> Russia, <img src="src/emoji/sct.png" alt="ua emoji" class="flag"> Scotland, and now <img src="src/emoji/ch.png" alt="ua emoji" class="flag"> Switzerland. <br> I also attended Y Combinator startup school. <br><br>
+                    Amongst too many things I'm curious about, I'm passionate about <br> technology, entrepreneurship, innovation, and the internet. <br><br>
+                    I like to believe that I have a good grasp of  C/C++, Linux, Bash, Javascript, <br>                  
+                    Bootstrap, and React. Feel free to <span class=computer-emoji>💻</span> <a class="hero-name" alt="Lina's Work" href="/work.html" target="_blank">explore my works</a> and decide for yourself.                 
                   </h1>
                 </div>
               </div>
@@ -41,8 +44,9 @@
                 <div class="herosection ">
                   <h1 class="username-lg"> Hello, my name is Evelina-Svitlana Protsenko but you can call me Lina. <br> I love programming, travelling and learning new things. <br>
                     <br> I had the chance to study math, programming and game design <br> in 4 countries: 🇺🇦 Ukraine, 🇷🇺 Russia, 🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland and now 🇨🇭 Switzerland. <br> I also attended Y Combinator startup school. <br>
-                    <br> Amongst too many things I'm curious about, I'm passionate about <br> technology, entrepreneurship, innovation, and the internet. <br>
-                    <br> Right now I'm looking for an entry-level position in 💻 <a class="hero-name" alt="Lina's Work" href="/work.html" target="_blank">software development.</a>
+                    <br> Amongst too many things I'm curious about, I'm passionate about <br> technology, entrepreneurship, innovation, and the internet. <br><br>  
+                    I like to believe that I have a good grasp of  C/C++, Linux, Bash, Javascript, <br>                  
+                    Bootstrap, and React. Feel free to <span class=computer-emoji>💻</span> <a class="hero-name" alt="Lina's Work" href="/work.html" target="_blank">explore my works</a> and decide for yourself.   
                   </h1>
                 </div>
                 <a href="/contact.html" id="mob-action-link2">
