--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/src/favicon.png">
   </head>
   <body>
     <div class="preloader">
@@ -32,7 +33,7 @@
                     <br>
                     <br>
                     <a class=" display-mob" href="/work.html" alt="Lina's work">
-                      <span id="mob-action">Look at my works</span>
+                      <span id="mob-action">Explore my works</span>
                     </a>
                   </h1>
                 </div>
@@ -43,7 +44,7 @@
               <div class="col-7"></div>
               <div class="col-4 action-box">
                 <a class="hero-action " href="/work.html" alt="Lina's work">
-                  <span id="action">Look at my works</span>
+                  <span id="action">Explore my works</span>
                 </a>
                 <br>
               </div>
@@ -73,7 +74,7 @@
               <div class="col-2"></div>
               <div class="col-8  action-box">
                 <a href="/work.html" id="mob-action-link2" alt="Lina's work">
-                  <span id="mob-action2">Look at my works</span>
+                  <span id="mob-action2">Explore my works</span>
                 </a>
               </div>
               <div class="col-2"></div>
@@ -95,7 +96,7 @@
                   </h1>
                 </div>
                 <a href="/contact.html" id="mob-action-link" alt="About Lina">
-                  <span id="mob-action">Look at my works</span>
+                  <span id="mob-action">Explore my works</span>
                 </a>
               </div>
               <div class="col-1"></div>
