--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Evelina-Svitlana Protsenko is a developer from Ukraine based in Switzerland contact her for job inquiries">
-    <title>Contacts</title>
+    <title>Contact</title>
     <script src="https://kit.fontawesome.com/0dcbce5e8a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -208,7 +208,6 @@
                       <img width="25" height="25" class="rounded-circle border" alt="placeholder github follower to be changed by API call">
                     </a>
                   </div>
-                  <span class="text-muted" id="lat-fol-n"></span>
                 </div>
                 <div class="col-sm-1 my-3"></div>
                 <div class="col-sm-2 my-3  github-block">
