portfolio websites can now be accessed through custom subdomains

--- a/work.html
+++ b/work.html
@@ -120,7 +120,7 @@
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">                      
-                      <a target="_blank" class="link b black-80 " href="https://astonishing-pithivier-fc247a.netlify.app" alt="Project Overwatch landing page live version">
+                      <a target="_blank" class="link b black-80 " href="http://overwatch.iamalwayshome.com" alt="Project Overwatch landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                       
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/overwatch-tribute" alt="Project Overwatch landing page github">
@@ -136,7 +136,7 @@
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">                      
-                      <a target="_blank" class="link b black-80 " href="https://gleeful-croissant-438e0b.netlify.app/" alt="Weather Web App landing page live version">
+                      <a target="_blank" class="link b black-80 " href="https://weather.iamalwayshome.com/" alt="Weather Web App landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                       
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/sc-plus-7" alt="Weather Web App landing page github">
@@ -266,7 +266,7 @@
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">                     
-                      <a target="_blank" class="link b black-80 " href="https://astonishing-pithivier-fc247a.netlify.app" alt="Project Overwatch landing page live version">
+                      <a target="_blank" class="link b black-80 " href="http://overwatch.iamalwayshome.com" alt="Project Overwatch landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                        
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/overwatch-tribute" alt="Project Overwatch landing page github">
@@ -282,7 +282,7 @@
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">                     
-                      <a target="_blank" class="link b black-80 " href="https://gleeful-croissant-438e0b.netlify.app/" alt="Weather Web App landing page live version">
+                      <a target="_blank" class="link b black-80 " href="https://weather.iamalwayshome.com/" alt="Weather Web App landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                        
                       </a>
                       <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/sc-plus-7" alt="Weather Web App landing page github">
