added React Weather Dashboard to portfolio

--- a/work.html
+++ b/work.html
@@ -79,8 +79,8 @@
                     </div>
                     <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Launches executables and builtins. Handles pipes, logical operators and subshell. Expands env var and *. Echo, cd, pwd, export, unset, env, exit are implemented. Made with <span class="purple b">
                         <a href="mailto:arthur@prahin.net" class="purple b" alt="Arthur Prahin email">
-                          <i class="fa-solid fa-envelope"></i>
-                        </a>Arthur Prahin </span>. </p>
+                          <i class="fa-solid fa-envelope"></i>Arthur Prahin
+                        </a> </span>. </p>
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">
@@ -136,18 +136,17 @@
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">                      
-                      <a target="_blank" class="link b black-80 " href="https://weather.iamalwayshome.com/" alt="Weather Web App landing page live version">
+                      <a target="_blank" class="link b black-80 " href="https://react-weather.iamalwayshome.com/" alt="Weather Web App landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                       
                       </a>
-                      <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/sc-plus-7" alt="Weather Web App landing page github">
+                      <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/react-weather-app" alt="Weather Web App landing page github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class= "b name-link black-80"> Weather Web App</span>
+                        <span class= "b name-link black-80">React Weather Dashboard</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
-                      <span class="br1 bg-green white ph1 f7 b">bootstrap</span>
-                      <span class="br1 bg-black-40 white ph1 f7 b">html</span>
-                      <span class="br1 bg-black-40 white ph1 f7 b">css</span>
-                      <span class="br1 bg-black-40 white ph1 f7 b">api</span>
+                      <span class="br1 bg-green white ph1 f7 b">ReactJS</span>
+                      <span class="br1 bg-green white ph1 f7 b">NodeJS</span>
+                      <span class="br1 bg-green white ph1 f7 b">bootstrap</span>      
                     </div>
                     <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Shows weather for the specified city for the next 7 days. Users can input city manually or allow app to locate them. Displays time. Uses OpenWeather and Geolocation API data. </p>
                   </div>
@@ -178,26 +177,20 @@
                           <span class="br1 bg-red white ph1 f7 b"> c</span>
                           <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
                         </div>
-                        <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Raytracing fps engine in C. A tribute to J. Carmack's Wolfenstein 3D. Made with <span class="purple b">
-                            <a href="mailto:samuel.bars@outlook.fr" class="purple b">
-                              <i class="fa-solid fa-envelope"></i>
-                            </a>Samuel Bars </span>, <span class="purple b" alt="Samuel Bars email">
+                        <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Raytracing FPS engine in C. A tribute to J. Carmack's Wolfenstein 3D. Made with <span class="purple b">                          
                             <a href="mailto:kolbasnykrug@gmail.com" class="purple b" alt="Sofia Zaleskaya email">
-                              <i class="fa-solid fa-envelope"></i>
-                            </a>Sofia Zalesskaya </span>. </p>
+                              <i class="fa-solid fa-envelope"></i>Sofia Zalesskaya
+                            </a> </span>. </p>
                       </div>
                     </div>
                     <div>
                       <div class="mb3">
                         <div class="lh-copy">
-                          <span class= "b  black-80"> Weather Web App 2.0</span>
-                          <span class="br1 bg-orange white ph1 f7 b">javascript</span>
-                          <span class="br1 bg-green white ph1 f7 b">React</span>
-                          <span class="br1 bg-black-40 white ph1 f7 b">html</span>
-                          <span class="br1 bg-black-40 white ph1 f7 b">css</span>
-                          <span class="br1 bg-black-40 white ph1 f7 b">api</span>
+                          <span class= "b  black-80">HTTP server</span>
+                          <span class="br1 bg-blue white ph1 f7 b"> group project</span>
+                          <span class="br1 bg-red white ph1 f7 b"> c++</span>
                         </div>
-                        <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Rewrite weather web app with React. </p>
+                        <p class="mb2 mv1 gray f7 lh-copy measure-wide"> HTTP server in C++. Looking for a partner. <a href="/contact.html"><span id="action">Contact me</span></a></p>
                       </div>
                     </div>
                 </div>
@@ -225,8 +218,8 @@
                     </div>
                     <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Launches executables and builtins. <br> Made with <span class="purple b">
                         <a href="mailto:arthur@prahin.net" class="purple b" alt="Arthur Prahin email">
-                          <i class="fa-solid fa-envelope"></i>
-                        </a>Arthur Prahin </span>. </p>
+                          <i class="fa-solid fa-envelope"></i>Arthur Prahin
+                        </a> </span>. </p>
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">
@@ -246,7 +239,7 @@
                     <div class="lh-copy">
                       <a target="_blank" class="link black-80 " href="https://github.com/iAmAlwaysHome/wireframe-renderer" alt="Project wireframe renderer github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class= "b name-link black-80"> Wireframe Renderer</span>
+                        <span class= "b name-link black-80">Wireframe Renderer</span>
                       </a>
                       <span class="br1 bg-red white ph1 f7 b">c</span>
                       <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
@@ -282,19 +275,18 @@
                   </div>
                   <div class="mb3">
                     <div class="lh-copy">                     
-                      <a target="_blank" class="link b black-80 " href="https://weather.iamalwayshome.com/" alt="Weather Web App landing page live version">
+                      <a target="_blank" class="link b black-80 " href="https://react-weather.iamalwayshome.com/" alt="Weather Web App landing page live version">
                         <i class="fa-brands fa-internet-explorer" style="font-size: smaller;"></i>                        
                       </a>
-                      <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/sc-plus-7" alt="Weather Web App landing page github">
+                      <a target="_blank" class="link b black-80 " href="https://github.com/iAmAlwaysHome/react-weather-app" alt="Weather Web App landing page github">
                         <i class="fa-brands fa-github" style="font-size: smaller;"></i>
-                        <span class= "b name-link black-80"> Weather Web App</span>
+                        <span class= "b name-link black-80">React Weather Dashboard</span>
                       </a>
                       <span class="br1 bg-orange white ph1 f7 b">javascript</span>
-                      <span class="br1 bg-green white ph1 f7 b">bootstrap</span>
-                      <span class="br1 bg-black-40 white ph1 f7 b">html</span>
-                      <span class="br1 bg-black-40 white ph1 f7 b">css</span>
-                      <span class="br1 bg-black-40 white ph1 f7 b">api</span>
-                      <p class="mb2 mv1 gray f7 lh-copy measure-wide"> A weather dashboard for the specified city for the next 7 days. </p>
+                      <span class="br1 bg-green white ph1 f7 b">ReactJS</span>
+                      <span class="br1 bg-green white ph1 f7 b">NodeJS</span>
+                      <span class="br1 bg-green white ph1 f7 b">bootstrap</span>   
+                      <p class="mb2 mv1 gray f7 lh-copy measure-wide"> A weather dashboard for the specified city for the next 7 days.</p>
                     </div>
                   </div>
                   <div class="mb3">
@@ -324,26 +316,20 @@
                           <span class="br1 bg-red white ph1 f7 b"> c</span>
                           <span class="br1 bg-black-40 white ph1 f7 b"> computer graphics</span>
                         </div>
-                        <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Raytracing fps engine in C. A tribute to J. Carmack's Wolfenstein 3D. Made with <span class="purple b">
-                            <a href="mailto:samuel.bars@outlook.fr" class="purple b">
-                              <i class="fa-solid fa-envelope"></i>
-                            </a>Samuel Bars </span>, <span class="purple b" alt="Samuel Bars email">
+                        <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Raytracing FPS engine in C. A tribute to J. Carmack's Wolfenstein 3D. Made with <span class="purple b">                           
                             <a href="mailto:kolbasnykrug@gmail.com" class="purple b" alt="Sofia Zaleskaya email">
-                              <i class="fa-solid fa-envelope"></i>
-                            </a>Sofia Zalesskaya </span>. </p>
+                              <i class="fa-solid fa-envelope"></i>Sofia Zalesskaya
+                            </a> </span>. </p>
                       </div>
                     </div>
                     <div>
                       <div class="mb3">
                         <div class="lh-copy">
-                          <span class= "b  black-80"> Weather Web App 2.0</span>
-                          <span class="br1 bg-orange white ph1 f7 b">javascript</span>
-                          <span class="br1 bg-green white ph1 f7 b">React</span>
-                          <span class="br1 bg-black-40 white ph1 f7 b">html</span>
-                          <span class="br1 bg-black-40 white ph1 f7 b">css</span>
-                          <span class="br1 bg-black-40 white ph1 f7 b">api</span>
+                          <span class= "b  black-80"> HTTP server </span>
+                          <span class="br1 bg-blue white ph1 f7 b"> group project</span>
+                          <span class="br1 bg-red white ph1 f7 b"> c++</span>
                         </div>
-                        <p class="mb2 mv1 gray f7 lh-copy measure-wide"> Rewrite weather web app with React. </p>
+                        <p class="mb2 mv1 gray f7 lh-copy measure-wide"> HTTP server in C++. Looking for a partner. <a href="/contact.html"><span id="mob-action2">Contact me</span></a></p>
                       </div>
                     </div>
                 </div>
