--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
                     <a class="navbar-brand" href="/index.html" alt="Homepage">> $ cd /home/  <span class="terminal blink--1">&block;</span></a>
                   </div>
                   <div class="col-2"></div>
-                  <div class="col-6 text-end">
+                 <div class="col-6 text-end navbar-sections">
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -42,6 +42,9 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 text-center">
                           <li class="nav-item">
                             <a class="nav-link " href="/about.html" alt="About Lina">About</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link " href="/stack.html" alt="Lina's Tech Stack">Tech Stack</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link " href="/work.html" alt="Lina's Work">Work</a>
