cursor is animated only for contact.html

--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
               <div class="row  mt-5 hide-mob-2">
                 <div class="col-sm-1 my-3"></div>
                 <div class="col-sm-2 my-3 github-block">
-                  <h2 class="fs-35 mb-2">Latest follower</h2>
+                  <h2 class="fs-35 mb-2">Random follower</h2>
                   <div id="lat-fol-link-wrapper" style="display:inline">
                     <a href="https://github.com/iAmAlwaysHome/" target="_blank" class="ff-pop latest-link">
                       <img width="25" height="25" class="rounded-circle border" alt="placeholder github follower to be changed by API call">
