--- a/work.html
+++ b/work.html
@@ -346,6 +346,6 @@
     <canvas id="canvas" class="canvas" width="1280px" height="800px"></canvas>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="/js/appWork.js"></script>
-    <script src="/js/cursorAnimation.js"></script>
+    <script src="/js/canvas.js"></script>
   </body>
 </html>
