--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
             <div class="row  mt-5 hide-mob-2">
               <div class="col-sm-1 my-3"></div>
               <div class="col-sm-2 my-3 github-block ">
-                <h2 class="fs-35 mb-2">Latest follower</h2>
+                <h2 class="fs-35 mb-2">Random follower</h2>
                 <div id="lat-fol-link-wrapper" style="display:inline">
                   <a href="https://github.com/iAmAlwaysHome/" class="ff-pop latest-link">
                     <img width="25" height="25" class="rounded-circle border" alt="placeholder github follower to be changed by API call">
@@ -169,6 +169,6 @@
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="/js/getGithubData.js"></script>
     <script src="/js/app.js"></script>
-    <script src="/js/cursorAnimation.js"></script>
+    <script src="/js/canvas.js"></script>
   </body>
 </html>
