--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Evelina-Svitlana Protsenko is a developer from Ukraine based in Switzerland, check out her projects and contact her for job inquiries">
+    <meta name="description" content="Evelina-Svitlana Protsenko is a developer from Ukraine based in Switzerland, explore her projects and contact her for job inquiries">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/0dcbce5e8a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -133,7 +133,7 @@
               <div class="row  mt-5 hide-mob-2">
                 <div class="col-sm-1 my-3"></div>
                 <div class="col-sm-2 my-3 github-block ">
-                  <h2 class="fs-35 mb-2">Latest follower</h2>
+                  <h2 class="fs-35 mb-2">Random follower</h2>
                   <div id="lat-fol-link-wrapper" style="display:inline">
                     <a href="https://github.com/iAmAlwaysHome/" class="ff-pop latest-link" alt="placeholder github follower to be changed by API call"></a>
                   </div>
@@ -203,6 +203,6 @@
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="/js/getGithubData.js"></script>
     <script src="/js/app.js"></script>
-    <script src="/js/cursorAnimation.js"></script>
+    <script src="/js/canvas.js"></script>
   </body>
 </html>
